# auto-nvm

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  install.ps1  install.sh
.github/: release-template.md
.github/workflows/: ci.yml  release.yml  test-install.yml
docs/: IMPLEMENTATION_PHASES.md  installation.md
scripts/: bump-version.sh
shell-integration/bash/: auto-nvm.bash
shell-integration/fish/: auto-nvm.fish
shell-integration/powershell/: auto-nvm.psm1
shell-integration/zsh/: auto-nvm.zsh
src/: lib.rs  main.rs
src/config/: mod.rs
src/nvm/: mod.rs
src/nvmrc/: mod.rs
src/shell/: mod.rs
src/uninstall/: binary.rs  mod.rs  path.rs
test-dirs/invalid-version/: .nvmrc
tests/: integration_tests.rs  shell_detection_test.rs
